--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,12 @@ spring:
     suffix: .html
     cache: false
     
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql:///localhost:3306/localhost?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: root
+#    password: qwer1234
+
+mybatis:
+  config-location: classpath:mybatis/config/mybatis-config.xml
+  mapper-locations: classpath:mybatis/*/*.xml
